# ImageUtilOpenCV

./: CMakeLists.txt  deblurring.cpp  deblurring.h  histogram.cpp  histogram.h  main.cpp  makefile  mat_operator.cpp  mat_operator.h  read_image.cpp  read_image.h  read_video.cpp  scalar_test.cpp  scalar_test.h  vector_test.cpp
Source/: CMakeLists.txt  edge_detection.cpp  edge_detection.h  face_detection.cpp  face_detection.h  histogram.cpp  histogram.h  image_filter.cpp  image_filter.h  image_merge.cpp  image_merge.h  main.cpp  ocr_operation.cpp  ocr_operation.h  read_image.cpp  read_video.cpp  read_video.h  scalar_test.cpp  similarity.cpp  similarity.h  vector_test.cpp  vector_test.h
